test/errors/array3.qk

#OUTPUT
#Syntax Error: Invalid token in expression.
# -> [14] numbers[1] = =
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> int
    int[10] numbers = array
    numbers[1] = =
    
    return 0
end

